Added spinner animation back in the feed view controller

--- a/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -1686,8 +1686,8 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="hYT-zi-chh"/>
-        <segue reference="B73-YQ-s57"/>
         <segue reference="ce0-5R-9At"/>
+        <segue reference="VnR-Og-EQv"/>
         <segue reference="cV5-4H-0Bj"/>
         <segue reference="aXJ-vG-G72"/>
     </inferredMetricsTieBreakers>
